# dss-system

./: .env.example  .gitignore  .gitleaks.toml  .vercelignore  DSS-Basic-Setup-Guide  LICENSE  Makefile  README.md  README_long_form.md  docker-compose.yml
apps/backend/: .dockerignore  .gitignore  Dockerfile  ENV_VARS.md  Makefile  README.md  VOICE_API.md  fly.toml  pyproject.toml  reproduce.sh  requirements.txt  start.sh
apps/backend/.github/workflows/: fly-deploy.yml  governance-integrity.yml  kernel-semantic-registry.yml  mmf-certification.yml  stack-rollout-check.yml
apps/backend/backend/: main.py
apps/backend/backend/api/: account.py  admin.py  agent_writes.py  assemble.py  auth.py  billing.py  chat.py  compat.py  document.py  enrich.py  governance_routes.py  history_utils.py  http.py  ingest.py  ledger.py  logging_utils.py  projection.py  resolver.py  schemas.py  stats.py  sync.py  telegram.py  ui.py  ui_utils.py  voice.py  wallet.py  wizard.py
apps/backend/backend/benchmarks/: 2wikimultihopqa_phase1_dataset.jsonl  DSS-225-deferred-partial-runs.md  Dockerfile  README.md  ablation_runner.py  ablation_suite.py  artifact_schema.py  comparison_suite.py  (+44 more)
apps/backend/dss_ledger/: README.md  __init__.py  cli.py  schema.py  service.py
apps/backend/scripts/: backfill_base_foundations.py  cross_repo_stripper.py  encrypt_ksr.py  generate_kernel_constants.py  generate_ledger_config.py  ksr_precommit.py  merge_ksr_population.py  scan_base_foundations.py
apps/backend/src/: main.py
apps/backend/tests/: test_document_api.py  test_telegram_api.py  test_voice_api.py
(+749 files in other folders)
