[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dss-backend"
version = "0.3.0"
description = "Core DSS backend logic for the dss-system monorepo"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "dss_ledger*"]
